update to new design

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
 
 <footer class="footer" id="footer">
   <div class="footer-content">
-    <img src="/logo-grey.png" alt="Pixelary" class="footer-logo" />
+    <img src="/logo-white.png" alt="Pixelary" class="footer-logo" />
     <p class="footer-copyright">© 2025 Pixelary. All rights reserved.</p>
     <p class="footer-location">Made with ♥ in Austin, TX</p>
   </div>
@@ -12,10 +12,9 @@
 
 <style is:global>
   .footer {
-    background-color: #2d2d2d;
+    background-color: var(--color-teal);
     padding: 60px 24px;
     text-align: center;
-    border-top: #ffffff 2px solid;
   }
 
   .footer-content {
